<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="30dp"
    android:layout_marginHorizontal="30dp"
    android:orientation="vertical"
    tools:context="com.example.kevin.winnyshop.HomeActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text=""
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtConsole"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/console"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edtHarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/harga" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:background="#64A1D8"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:text="@string/search" />

        <Button
            android:id="@+id/btnATC"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:background="#64A1D8"
            android:textColor="#FFFFFF"
            android:layout_marginTop="20dp"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@id/btnSearch"
            android:text="@string/add_to_cart"
            android:layout_marginLeft="10dp" />

        <Button
            android:id="@+id/btnTC"
            android:text="@string/to_cart"
            android:layout_width="95dp"
            android:layout_height="45dp"
            android:layout_marginStart="6dp"
            android:background="#64A1D8"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@id/btnATC"
            android:layout_marginLeft="10dp" />

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="#64A1D8"
            android:enabled="false"
            android:text="@string/insert"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnATC" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="94dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="8dp"
            android:background="#64A1D8"
            android:enabled="false"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnATC"
            app:layout_constraintStart_toEndOf="@id/btnInsert"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="8dp" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:background="#64A1D8"
            android:enabled="false"
            android:text="@string/delete"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/btnATC"
            app:layout_constraintStart_toEndOf="@id/btnClear"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="8dp" />

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.LinearLayoutCompat>
