<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    tools:context="com.example.kevin.winnyshop.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="60dp"
        android:text="@string/KingShop"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nama"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="Password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="#64A1D8"
        android:textColor="#FFFFFF"
        android:text="@string/btnLogin" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="#64A1D8"
        android:textColor="#FFFFFF"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnRegister" />

</android.support.v7.widget.LinearLayoutCompat>
